--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@
   <section class="hle">
     <h2>🧠لمعرفة المزيد :</h2>
     <ul>
-      <li><a href="../login/index.html"> تسجيل الدخول </a></li>
-      <li><a href="../services/index.html"> خدماتنا </a></li>
-      <li><a href="../connect with our/index.html"> مساعدة </a></li>
+      <li><a href="login/index.html"> تسجيل الدخول </a></li>
+      <li><a href="services/index.html"> خدماتنا </a></li>
+      <li><a href="connect with our/index.html"> مساعدة </a></li>
     </ul>
   </section>
   
